--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,13 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
 
+@layer base {
+  body {
+    @apply text-text-main font-sans;
+  }
+}
 .react-flow .react-flow__edge path {
   stroke: #000;
   stroke-width: 2px;
